[project]
name = "vkd"
version = "0.1.0"
description = ""
authors = [
    {name = "SolitarySpiral",email = "solitary.ratty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "vk-api (>=11.9.9,<12.0.0)",
    "yt-dlp (>=2025.5.22,<2026.0.0)",
    "aiohttp (>=3.12.2,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pytils (>=0.4.3,<0.5.0)",
    "ffmpeg (>=1.4,<2.0)",
    "ffprobe (>=0.5,<0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
